--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "postcss-nested": "^6.0.1",
     "postcss-nesting": "^12.0.3",
     "react": "^18",
