--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,17 @@
 {
-    "typescript.enablePromptUseWorkspaceTsdk": true,
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.quickSuggestions": {
-      "strings": "on"
-    },
-    "editor.codeActionsOnSave": [
-      "source.addMissingImports",
-      "source.fixAll.eslint"
-    ],
-    "python.formatting.provider": "none"
-  }
-  
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.quickSuggestions": {
+    "strings": "on"
+  },
+  "editor.codeActionsOnSave": [
+    "source.addMissingImports",
+    "source.fixAll.eslint"
+  ],
+  "python.formatting.provider": "none",
+  "debug.javascript.defaultRuntimeExecutable": {
+    "pwa-node": "/Users/tokuzoutanaka/.local/share/mise/shims/node"
+  },
+  "python.defaultInterpreterPath": "/Users/tokuzoutanaka/.local/share/mise/installs/python/3.13.2/bin/python"
+}
